objects/Market__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if Market is active</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expedia_Market_Id__c</fullName>
        <description>Identifier in LCM</description>
        <label>Expedia Market Id</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>External_Market_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Salesforce Id from PSG Org</description>
        <externalId>true</externalId>
        <label>External Market Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Maps the region the market belongs to</description>
        <label>Region</label>
        <referenceTo>Region__c</referenceTo>
        <relationshipLabel>Markets</relationshipLabel>
        <relationshipName>Markets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Super_Region__c</fullName>
        <formula>Region__r.Super_Region__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Super Region</label>
        <type>Text</type>
    </fields>
    <label>Market</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>Super_Region__c</columns>
        <columns>External_Market_Id__c</columns>
        <columns>Expedia_Market_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Market Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Markets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>